--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.17.0",
+    "file-loader": "^0.8.4",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "react": "^0.13.3",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.0"
   }
 }
