--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^5.3.2",
     "css-loader": "^0.17.0",
     "file-loader": "^0.8.4",
+    "flux": "^2.1.1",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "react": "^0.13.3",
