--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal Homepage Asset Builder",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,17 +22,21 @@
   },
   "homepage": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io",
   "dependencies": {
-    "babel-core": "^5.8.23",
-    "babel-loader": "^5.3.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.17.0",
     "file-loader": "^0.8.4",
     "flux": "^2.1.1",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.0"
+    "webpack": "^1.12.14"
   }
 }
