--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "TheIronDeveloper.github.io",
-  "version": "1.0.0",
-  "description": "Personal Homepage Asset Builder",
+  "version": "2.0.0",
+  "description": "Personal Homepage",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,23 +19,5 @@
   "bugs": {
     "url": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io/issues"
   },
-  "homepage": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io",
-  "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.17.0",
-    "file-loader": "^0.8.4",
-    "flux": "^2.1.1",
-    "less": "^2.5.1",
-    "less-loader": "^2.2.0",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.7",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14"
-  }
+  "homepage": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io"
 }
