Adding Game of Life to Header
I made a quick game of life implementation using canvas+webWorkers.

Additionally, I added linting and cleaned up my earlier code with
the things linting caught (missing semi-colons, no block blank lines, etc).

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal Homepage",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint scripts/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io/issues"
   },
-  "homepage": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io"
+  "homepage": "https://github.com/TheIronDeveloper/TheIronDeveloper.github.io",
+  "devDependencies": {
+    "eslint": "^3.0.0",
+    "eslint-config-google": "^0.6.0"
+  }
 }
